*reposilite-0 (08 Oct 2020)

  08 Oct 2020; Manuel Friedli <manuel@gentoo.org> +metadata.xml,
  +reposilite-0.ebuild:
  acct-user/reposilite: Add user for dev-util/reposilite