@@ -1,3 +1,4 @@
 EBUILD reposilite-0.ebuild 331 BLAKE2B 833d690c07eecd84236e0ffd15a2e0290f1c406afe3c745b0323107f590a53b65f01beda3f2f1b012062c6e186c02fa2cb1bf8e992fbe8115d343c6f4a53ac63 SHA512 a429ebf96c7cfa06fc1b01c5f4c038681b8e436215718ca598563caf46337c761928b255c38c31edd482664a5f0feaf065b52596a71680faebc5912a7709aede
-MISC ChangeLog 175 BLAKE2B c67cebcad4f57fa69afedc56312a9933f36e6e52ff959bb3a2a054bf0af506fd6f95f630e9dbfb8cf13e7a8bf28090b32d2ee27d84dd0ab648c97dbe40868a2c SHA512 c94ec4d193e80aafce6bd0d4bb0088377345b9c544bc48281a5cfe4b281be44a8cc7770bba2e5bc1cdc5fc9daf71f416cc818f275f84b68741305c97db958ed5
+EBUILD reposilite-1.ebuild 270 BLAKE2B a78959245678f35cdde982f644a876a0f45636bf05e34291b277b161e4ff8aae810ebaa259252d786305e043e898e8d53f1ec4e195fd72e7d69c6a35a05b7598 SHA512 36f1cf967abafa3d75034f015400490601c7c2070a44f12b1bd1fb9223be192b6956523b08aafde4278fac23a355f7b6b948251206d0c8bd9b72cc10b082c826
+MISC ChangeLog 327 BLAKE2B 30d90bffe571b9604f41c9715aea2fb427b8019365a3a7f0a867723ba92777d1e7296f793645f33c40e2155ea1d096ecd5d8ab375adf036174b5edfd19df87ac SHA512 9d794b0e0622564da8112bf766e9053bccf2175e173263ee3f357a561c6518364b7c16967c9cc840ab380b70bc1141a11251122763c4b47e45d337fff9cbacfd
 MISC metadata.xml 248 BLAKE2B cb50cad2c614a99daa2e236f9e0d0fab1ab20a898c0b0f0c28a1387820ab1f2b9dd4d396a3b38f732b493824f96a29ee5894e80e09dbd08dff62c1aaba3feaa0 SHA512 29f9b96b0a77546cce6a8bffd82fae2fd0939d32a7a05ffd0d91f9250a019a3ddaa599b93988c82daabb9c4c4b284dd947e2c47f6ca7727b8539cffa91bcb8c2
