@@ -1,3 +1,8 @@
+*reposilite-1 (15 Aug 2022)
+
+  15 Aug 2022; Manuel Friedli <manuel@gentoo.org> +reposilite-1.ebuild:
+  acct-user/reposilite: No dep on docker anymore.
+
 *reposilite-0 (08 Oct 2020)
 
   08 Oct 2020; Manuel Friedli <manuel@gentoo.org> +metadata.xml,
